@@ -53,6 +53,7 @@ directives = {
       u'unicode': 'unicode',
       u'class (translation required)': 'class',
       u'role (translation required)': 'role',
+      u'default-role (translation required)': 'default-role',
       u'inneh\u00e5ll': 'contents',
       u'sektionsnumrering': 'sectnum',
       u'target-notes (translation required)': 'target-notes',
